<?xml version="1.0" encoding="utf-8"?>



<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="450dp"
    android:layout_weight="1"
    android:rowCount="3"
    android:columnCount="1"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/popup_layout_style">

    <Button
        android:id="@+id/content2_1"
        android:tag="3"
        android:layout_rowWeight="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:background="@color/white"
        android:onClick="customPopupAction"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:drawableEnd="@drawable/ic_01"
        android:text="@string/content2_1" />

    <Button
        android:id="@+id/content2_2"
        android:tag="4"
        android:layout_rowWeight="1"
        android:layout_gravity="fill_horizontal"
        android:background="@color/white"
        android:text="@string/content2_2"
        android:layout_row="1"
        android:textAllCaps="false"
        android:drawableEnd="@drawable/ic_01"
        android:textSize="24sp"
        android:onClick="customPopupAction"/>

    <Button
        android:id="@+id/content2_3"
        android:tag="5"
        android:layout_rowWeight="1"
        android:layout_gravity="fill_horizontal"
        android:background="@color/white"
        android:onClick="customPopupAction"
        android:layout_row="2"
        android:textAllCaps="false"
        android:drawableEnd="@drawable/ic_01"
        android:textSize="24sp"
        android:text="@string/content2_3" />
</GridLayout>