<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="230dp"
    android:layout_height="450dp"
    android:layout_weight="1"
    android:rowCount="3"
    android:columnCount="1"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/popup_layout_style"
    >

        <Button
            android:id="@+id/content1_1"
            android:tag="0"
            android:layout_rowWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:background="@drawable/button_style"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:fontFamily="@font/autour_one"
            android:drawableEnd="@drawable/ic_01"
            android:text="@string/content1_1"
            android:layout_marginBottom="40dp"
            />

        <Button
            android:id="@+id/content1_2"
            android:tag="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill_horizontal"
            android:background="@drawable/button_style"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:fontFamily="@font/autour_one"
            android:drawableEnd="@drawable/ic_01"
            android:text="@string/content1_2"
            android:layout_row="1"
            android:layout_marginBottom="40dp"/>

        <Button
            android:id="@+id/content1_3"
            android:tag="2"
            android:layout_rowWeight="1"
            android:layout_gravity="fill_horizontal"
            android:background="@drawable/button_style"
            android:textAllCaps="false"
            android:drawableEnd="@drawable/ic_01"
            android:textSize="24sp"
            android:fontFamily="@font/autour_one"
            android:layout_row="2"
            android:text="@string/content1_3"
            android:layout_marginBottom="20dp"/>
</GridLayout>